2013-04-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c: Few more fixes for menu entry editor
	rendering.
	Reported by: Andrey Borzenkov <arvidjaar@gmail.com>

2013-04-06  Andrey Borzenkov <arvidjaar@gmail.com>

	* conf/Makefile.extra-dist (EXTRA_DIST): Add
	grub-core/lib/libgcrypt/src/gcrypt.h.in and util/import_gcrypth.sed.

2013-04-06  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-install_header: Use @PACKAGE@.mo in message catalog name
	instead of hardcoding grub.mo.

2013-04-05  Fedora Ninjas <grub2-owner@fedoraproject.org>

	* util/grub.d/30_os-prober.in: Support btrrfs linux-prober extensions.

2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Use GRUB_PROPERLY_ALIGNED_ARRAY in grub-core/disk/cryptodisk.c and
	grub-core/disk/geli.c.

2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c: Prefer enum to #define.

2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpi.c: Use sizeof rather than hardcoding the size.

2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace 8 with GRUB_CHAR_BIT in several places when appropriate.

2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Add new defines GRUB_RSDP_SIGNATURE_SIZE and GRUB_RSDP_SIGNATURE.

2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c: Use GRUB_CHAR_BIT.

2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/bsdlabel.h: Use enums.

2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Move GRUB_CHAR_BIT to types.h.

2013-04-04  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi: Document more user commands.

2013-04-04  Andrey Borzenkov  <arvidjaar@gmail.com>

	* docs/grub.texi: Document menuentry --id option.

2013-04-04  Francesco Lavra  <francescolavra.fl@gmail.com>

	* util/grub-mkimage.c: Introduce new define EFI32_HEADER_SIZE.

2013-04-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Unify file copying setup across different install scripts. Add